ignite-4374: check of logging configuration added